[gd_scene load_steps=52 format=3 uid="uid://jd52mao54vxa"]

[ext_resource type="Texture2D" uid="uid://b5aax1i40hp78" path="res://art/player/dara_death.png" id="1_isvhe"]
[ext_resource type="Script" path="res://scripts/player/player_sea.gd" id="1_pa4xk"]
[ext_resource type="Texture2D" uid="uid://b8pg1fxyuma2x" path="res://art/player/dara_idle.png" id="1_u5xla"]
[ext_resource type="Texture2D" uid="uid://dew3puq6241wt" path="res://art/player/dara_attack.png" id="2_4vi7q"]
[ext_resource type="Texture2D" uid="uid://c75ebqtkrjrh7" path="res://art/player/dara_hurt.png" id="2_qnqi8"]
[ext_resource type="Texture2D" uid="uid://c6vylv6ywocat" path="res://art/player/dara_move.png" id="4_adsrw"]
[ext_resource type="Texture2D" uid="uid://bk45quo4quqej" path="res://art/ui/buttons/attack-btn.png" id="7_fqfew"]

[sub_resource type="AtlasTexture" id="AtlasTexture_emyft"]
atlas = ExtResource("2_4vi7q")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w28b"]
atlas = ExtResource("2_4vi7q")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a08m8"]
atlas = ExtResource("2_4vi7q")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_52kha"]
atlas = ExtResource("2_4vi7q")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf24n"]
atlas = ExtResource("2_4vi7q")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra5oi"]
atlas = ExtResource("2_4vi7q")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeghg"]
atlas = ExtResource("2_4vi7q")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1twta"]
atlas = ExtResource("2_4vi7q")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rhj3"]
atlas = ExtResource("1_isvhe")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo5a4"]
atlas = ExtResource("1_isvhe")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hi1n"]
atlas = ExtResource("1_isvhe")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s0mh"]
atlas = ExtResource("1_isvhe")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gufns"]
atlas = ExtResource("1_isvhe")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0i61"]
atlas = ExtResource("2_qnqi8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpdhw"]
atlas = ExtResource("2_qnqi8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjpad"]
atlas = ExtResource("2_qnqi8")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_61xv5"]
atlas = ExtResource("2_qnqi8")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg58v"]
atlas = ExtResource("1_u5xla")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5db53"]
atlas = ExtResource("1_u5xla")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c0ak"]
atlas = ExtResource("1_u5xla")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_60567"]
atlas = ExtResource("1_u5xla")
region = Rect2(1200, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewhh0"]
atlas = ExtResource("1_u5xla")
region = Rect2(1500, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b5xl"]
atlas = ExtResource("1_u5xla")
region = Rect2(1800, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dif15"]
atlas = ExtResource("1_u5xla")
region = Rect2(2100, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0ye7"]
atlas = ExtResource("1_u5xla")
region = Rect2(2400, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoepx"]
atlas = ExtResource("1_u5xla")
region = Rect2(2700, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yb5k"]
atlas = ExtResource("4_adsrw")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6ydv"]
atlas = ExtResource("4_adsrw")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyj2c"]
atlas = ExtResource("4_adsrw")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg28w"]
atlas = ExtResource("4_adsrw")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujrub"]
atlas = ExtResource("4_adsrw")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcek7"]
atlas = ExtResource("4_adsrw")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkjlq"]
atlas = ExtResource("4_adsrw")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc2o4"]
atlas = ExtResource("4_adsrw")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_ha6td"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_emyft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w28b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a08m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52kha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf24n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra5oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeghg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1twta")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rhj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo5a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hi1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s0mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gufns")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0i61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpdhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjpad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61xv5")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg58v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5db53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c0ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60567")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewhh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b5xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dif15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0ye7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoepx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yb5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6ydv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyj2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg28w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujrub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcek7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkjlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc2o4")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3koun"]
radius = 19.0
height = 98.0

[sub_resource type="Animation" id="Animation_7wnwk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5grs6"]
resource_name = "attack"
length = 1.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_7d53j"]
resource_name = "death"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_mvgr4"]
resource_name = "hurt"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_d6nv1"]
resource_name = "idle"
length = 1.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_2u3ag"]
resource_name = "move"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4w0ne"]
_data = {
"RESET": SubResource("Animation_7wnwk"),
"attack": SubResource("Animation_5grs6"),
"death": SubResource("Animation_7d53j"),
"hurt": SubResource("Animation_mvgr4"),
"idle": SubResource("Animation_d6nv1"),
"move": SubResource("Animation_2u3ag")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qh32"]
size = Vector2(20, 67)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource("1_pa4xk")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ha6td")
animation = &"idle"

[node name="PlayerCol" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3koun")

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4w0ne")
}
autoplay = "idle"

[node name="Aim" type="Node2D" parent="."]

[node name="Crosshair" type="Marker2D" parent="Aim"]
position = Vector2(45, 0)

[node name="CrosshairSprite" type="Sprite2D" parent="Aim/Crosshair"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_fqfew")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="HurtboxCol" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_1qh32")
